--- a/style.css
+++ b/style.css
@@ -95,27 +95,25 @@ main {
   cursor: pointer;
 }
 
-/* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
   padding-bottom: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
+  width: 100%;
   height: 80%;
-  overflow-y: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  -webkit-animation-name: fadeIn; /* Fade in the background */
+  overflow-y: auto;
+  background-color: rgb(0, 0, 0); 
+  background-color: rgba(0, 0, 0, 0.4); 
+  -webkit-animation-name: fadeIn; 
   -webkit-animation-duration: 0.4s;
   animation-name: fadeIn;
   animation-duration: 0.4s;
 }
 
-/* Modal Content */
 .modal-content {
   background-color: var(--secondary-color);
   margin: auto;
@@ -163,7 +161,7 @@ main {
   padding: 1em 2em;
   line-height: 1.5;
 }
-/* The Close Button */
+
 .close {
   padding: 0.25em 0.5em;
   color: var(--primary-color);
@@ -179,7 +177,6 @@ main {
   cursor: pointer;
 }
 
-/* Add Animation */
 @-webkit-keyframes slideIn {
   from {
     bottom: -300px;
